Cluster time keys refresh interval doesn't back off on consecutive errors

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.0.0-rc2, 5.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • v5.0, v4.4, v4.2, v4.0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When refreshing cluster time keys, if an error occurs, the next refresh is meant to happen in 200ms * the number of consecutive errors, with a max interval of 10 minutes. The error count is set to 0 at the beginning of the while loop where retries happen though, so it can never be greater than 1, meaning the intended back off logic never applies and the interval is always 200ms.

            Assignee:
            Jack Mulrow
            Reporter:
            Jack Mulrow
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: