SERVER-56722 Fix cluster time key refresh backoff logic

(cherry picked from commit e712fd4bda1a1511506dc7481e03ed48a146cc8e)